# OpenCodeViz

./: .gitignore  .npmignore  AGENTS.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.codex/: config.toml
.github/workflows/: publish.yml
docs/superpowers/plans/: 2026-04-17-architecture-diagrams.md  2026-04-17-architecture-interaction-adjustments.md  2026-04-17-flow-diagram.md  2026-04-18-ast-extraction.md  2026-04-18-code-legend-filter.md
docs/superpowers/specs/: 2026-04-17-architecture-diagram-design.md  2026-04-17-architecture-interaction-design.md  2026-04-17-flow-diagram-design.md  2026-04-18-ast-extraction-design.md  2026-04-18-code-legend-filter-design.md
lib/: cli.js  config.js  python.js  setup.js
scripts/: build-web.mjs
src/codeviz/: __init__.py  __main__.py  analysis.py  app.py  architecture.py  cli.py  commands.py  extractor.py  fingerprint.py  models.py  project.py  qa_agent.py  runtime_config.py  server.py  storage.py
src/codeviz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/codeviz/web/: app.js  (+9 more)
tests/: conftest.py  test_architecture.py  test_ast_parsing.py  test_ast_resolution.py  test_cli.py  test_fingerprint.py  test_fixtures.py  test_import_resolution.py  test_port_selection.py  test_project_integration.py  test_qa_streaming.py  test_runtime_config.py  test_storage.py
tests/web/: architecture-interactions.test.mjs  architecture-layout.test.mjs  code-layout.test.mjs  code-legend-filter.test.mjs  flow-interactions.test.mjs  flow-layout.test.mjs  flow-search.test.mjs  view-search.test.mjs
(+14 files in other folders)
