[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeviz"
version = "0.2.2"
description = "AI-powered local code graph visualization and codebase Q&A tool"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "pydantic>=2.11,<3",
  "langchain>=0.3,<1",
  "langchain-core>=0.3,<1",
  "langchain-openai>=0.3,<1",
  "langchain-anthropic>=0.3,<1",
  "langchain-google-genai>=2,<3",
  "tree-sitter>=0.24,<0.25",
  "tree-sitter-python>=0.23,<0.24",
  "tree-sitter-javascript>=0.23,<0.24",
  "tree-sitter-typescript>=0.23,<0.24",
]

[project.optional-dependencies]
runtime = [
  "deepagents>=0.0.0",
]

[project.scripts]
codeviz = "codeviz.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
codeviz = ["web/*"]
